# rs-plugin-lookup-interfaces

./: Cargo.toml  README.md
src/: lib.rs
