[package]
name = "rs-plugin-lookup-interfaces"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["arnaud jezequel"]
description = "Common description for plugin creation"
homepage = "https://github.com/neckaros/rs-plugin-lookup-interfaces/" 
readme = "README.md"
repository = "https://github.com/neckaros/rs-plugin-lookup-interfaces/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugin-request-interfaces = "0.8.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.26.2"
strum_macros = "0.26.2"